Changed id to Id for Sif delete.

--- a/Code/Sif3Framework/Sif.Framework/Sif.Framework.csproj
+++ b/Code/Sif3Framework/Sif.Framework/Sif.Framework.csproj
@@ -57,9 +57,8 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\packages\NHibernate.4.0.1.4000\lib\net40\NHibernate.dll</HintPath>
     </Reference>
-    <Reference Include="Sif.Specification.Infrastructure, Version=3.2.1.0, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\Sif3Specification\Sif.Specification.Infrastructure.v3_2_1\bin\Release\Sif.Specification.Infrastructure.dll</HintPath>
+    <Reference Include="Sif.Specification.Infrastructure">
+      <HintPath>..\..\Sif3Specification\Sif.Specification.Infrastructure.v3_2_1\bin\Debug\Sif.Specification.Infrastructure.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Configuration" />
